<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="60dp"
    android:clipToPadding="false" tools:targetApi="o">

    <ImageView
        android:id="@+id/avatar"
        android:layout_alignParentLeft="true"
        android:scaleType="centerInside"
        android:background="@drawable/circle"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/name"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/avatar"
        android:layout_alignTop="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/rose"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_body"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:background="@drawable/their_message"
        android:paddingVertical="12dp"
        android:paddingHorizontal="16dp"
        android:elevation="2dp"
        android:textSize="18dp"
        android:text="@string/how_are_you_doing_this_is_a_long_message_that_should_probably_wrap"
        />
</RelativeLayout>