<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FDFF"
    tools:context=".MainActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rect883"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <LinearLayout
        android:id="@+id/linearLayout2"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainmenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/zainteresuj_si"
            android:textColor="#000"
            android:textSize="16sp" />
        <!--android:textColor="#818181"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/fb"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/fb"
                    android:textColor="#000"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/in"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/youtube"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:id="@+id/Youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/Youtube"
                    android:textColor="#000"
                    android:textSize="10sp" />

            </LinearLayout>
            <!--android:textColor="#172646"-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sk"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/sklep"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/sklep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sklep"
                    android:textColor="#000"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/github"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/github"
                    android:textColor="#000"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <FrameLayout
        android:id="@+id/framelayout"

        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:padding="1dp"
        android:layout_height="wrap_content">

    </FrameLayout>
    </ScrollView>




</android.support.constraint.ConstraintLayout>